issues/gateway-tls-mutual-istio-ignores-tls-routes/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: tls
      protocol: TLS
    hosts:
    - www.example.com
    tls:
      mode: ISTIO_MUTUAL
