issues/gateway-tls-mutual-istio-ignores-tls-routes/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: example-com-ext
spec:
  hosts:
  - www.example.com
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: tls
    protocol: TLS
  resolution: DNS
